--- a/01 Go.md
+++ b/01 Go.md
@@ -1,3 +1,45 @@
 # 切片slice
 
 # 通道channel
+
+# Map
+简短要点：
+1.底层结构：hmap和bmap（桶和溢出桶）
+2.哈希冲突：链地址法（溢出桶）
+3.扩容机制：负载因子>6.5或溢出桶过多时触发
+4.时间复杂度：平均O(1)，最坏是O(n)，也就是所有的key哈希冲突
+5.适用场景：高频查找、插入、删除，但不适合高并发（需加锁）
+6.特性：无序遍历，非线程安全，动态扩容，内存占用
+
+详细：
+1.map数据结构
+- hmap（Header of Map）存储map的元信息（如元素数量、桶数量、哈希种子等）
+- bmap（Bucket Map）：存储键值对的桶（Bucket），每个桶最多存储8个键值对
+- mapextra：存储溢出桶（Overflow Bucket）信息，用于处理哈希冲突
+
+2.map特性
+- 无序遍历：range map顺序随机（防止依赖哈希顺序的攻击）
+- 非线程安全：并发读写会panic（需用sync.Map或mutex），可以并发读
+- 动态扩容：自动扩容，但可能短暂影响性能
+- 内存占用：相比slice更高（存储哈希和溢出链）
+
+3.哈希冲突处理
+Go采用链地址法处理冲突：
+- 每个桶最多存储8个键值对
+- 如果桶满了，会创建溢出桶（Overflow Bucket），并进行链式链接
+- 查找时，先查主桶，再查溢出桶
+
+4.扩容机制
+当map的负载因子>6.5或溢出桶过多时，会触发扩容：
+1）增量扩容（渐进式扩容）
+- 分配新桶数组（大小为原来的2倍）
+- 逐步将旧桶数据迁移到新桶（每次写入时迁移一部分）
+- 查询时，同时检查新旧桶
+
+2）等量扩容（Same-Size Expansion）
+- 如果溢出桶太多（但元素不多），会重新整理桶，减少溢出链
+
+[图片]
+
+背诵版：
+首先map的底层数据结构是hmap和bmap，其中hmap存放map的元信息，比如元素数量，同数量
